# csc299-project

./: .dockerignore  .env.demo  .gitignore  CHANGES_SUMMARY.md  DEBUG.md  DEMO_README.md  NVAI_FEATURE.md  README.md  RPC_OPTIMIZATION.md  SETUP_NVAI.md  STYLE_GUIDE.md  SUMMARY.md  example.env  firestore.rules  middleware.ts  next.config.js  package-lock.json  package.json  package.json.demo-scripts  start-clean.sh  tailwind.config.ts  video.txt
app/: globals.css  layout.tsx
components/: .MultisigOnboarding.tsx.swp  AddMemberInput.tsx  AdminPayoutPanel.tsx  AnimatedBackground.tsx  ApproveButton.tsx  ChangeThresholdInput.tsx  ChangeUpgradeAuthorityInput.tsx  ConnectWalletButton.tsx  CreateSquadForm.tsx  CreateTransactionButton.tsx  CustomWalletModal.tsx  DecryptedText.tsx  DepositButton.tsx  EmptyMultisigState.tsx  ExecuteButton.tsx  LandingPage.tsx  MultiSigApprovalModal.tsx  MultisigAddressDisplay.tsx  MultisigOnboarding.tsx  MultisigSelector.tsx  NVAIBurnOption.tsx  OnboardingModal.tsx  PortfolioValue.tsx  PortfolioWrapper.tsx  RejectButton.tsx  RemoveMemberButton.tsx  RenderMultisigRoute.tsx  SendSolButton.tsx  SendTokensButton.tsx  SetProgramIdInput.tsx  Wallet.tsx  (+6 more)
final/: .gitignore  ABOUT.md  README.md  REFACTORING_NOTES.md  SECURITY.md  SETUP.md  demo.sh  pyproject.toml  test_ai.sh
final/src/taskmaster/: __init__.py  __main__.py  ai.py  chat.py  display.py  manager.py  models.py
final/tests/: test_taskmaster.py
task3/: README.md  demo_tasks.json  pyproject.toml
task3/src/tasks3/: __init__.py  task_manager.py
task3/tests/: test_inc.py  test_task_manager.py
task4/: README.md  pyproject.toml
task4/src/tasks4/: __init__.py
(+245 files in other folders)
