[project]
name = "taskmaster"
version = "1.0.0"
description = "TaskMaster - Professional AI-Enhanced Task Management System (CSC299 Final Project)"
readme = "README.md"
authors = [
    { name = "CSC299 Student", email = "student@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.52.0",
]

[project.scripts]
taskmaster = "taskmaster:main"

[project.optional-dependencies]
ai = ["openai>=1.52.0"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

