[project]
name = "task4"
version = "0.1.0"
description = "CSC299 Task 4 – AI summarisation experiment"
readme = "README.md"
authors = [
    { name = "ceo", email = "student@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.52.0",
]

[project.scripts]
task4 = "tasks4:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"




